 *
 *
 * Copyright (c) 2007-2011 VCAD System Research Program, RIKEN. 
 * All rights reserved.
 *
 * Copyright (c) 2011-2015 Institute of Industrial Science, The University of Tokyo. 
 * All rights reserved.
 *
 * Copyright (c) 2012-2015 Advanced Institute for Computational Science, RIKEN. 
 * All rights reserved.
 *
 */


REVISION HISTORY
================

--------------------------
2015-09-12
r1634 version 2.4.0
- version 2.4.x => PMlib that corresponds to process group

--------------------------
2015-07-27
r1633 introduce process group

r1632 update PMlib-4.0.1

--------------------------
2015-07-26
r1631 merge the rest of pull request #23

--------------------------
2015-07-25
r1630 merge pull request #23 manually and bug fix
- update user guide : Output statistics

r1629 modify wall parameter
- remove getWallType()
- add /TurbulenceModeling/VelocityProfile
- update included user guide

r1628 use MPIPolylib::load_only_in_rank0() and distribute_only_from_rank0()
- get accurate BC area

--------------------------
2015-07-14
r1627 update examples for latest parameters
- included examples; 2Dcavity, 3Dcavity, 2Dcyl, Jet, LDC, PMT

--------------------------
2015-07-12
r1626 change parameter orgnization
- /Output
- LimitedCompresibility
- Preconditioner

--------------------------
2015-07-10
r1625 change mask from d_cdf to b_bcd
- update_vec(), update_vec4_(), divergence_cc_(), pvec_central_(), pvec_central_les_()

--------------------------
2015-07-09
r1624 modify bicg

r1623 add Limited compressibility

--------------------------
2015-07-08
r1622 non-dim param for stability

r1621 modify Stability Control

r1620 add Stability Control function
- gather isnan flag in Loop()

--------------------------
2015-07-05
r1619 modify Vspec implementation
- encVbitIBC(), encVbitIBCrev(), encVbitOBC()
- expire VBC_UWD flag

--------------------------
2015-06-30
r1618 suppress error message in mergeSameSolidCell()
- expire paintCutOnPoint()

--------------------------